# ConcurrentLabs

lab1/: CMakeLists.txt  child.cpp  main.cpp
lab2/: CMakeLists.txt  child.cpp  main.cpp
lab2/txtFiles/: input  report
